data/derived/sp14/progs/unify/prog1403.ml.out
Characters 26-27:
  let _ = eval (buildThresh(1,2,0,1),0.5,0.2);;
                            ^
Error: This expression has type int but an expression was expected of type
         expr
